<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AceyDeucey</string>
    <string name="title_activity_main">AceyDeucey</string>
    <string name="new_game">New Game</string>
    <string name="roll">Roll Dice</string>
    <string name="undo_button">Undo</string>
    <string name="white_drinks">White Drinks</string>
    <string name="black_drinks">Black Drinks</string>
    <string name="human_red_player">Human Red Player</string>
    <string name="human_white_player">Human White Player</string>
    <string name="white_player">White Player</string>
    <string name="black_player">Black Player</string>
    <string name="title_activity_own_number">Choose Your Number</string>
    <string name="choose_numbers">Choose New Numbers</string>
    <string name="admob_id">efb0de5978c84cd9</string>
    <string name="gammon_table">Our table for playing Gammon</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_directions">Directions</string>
    <string name="rules">AceyDeucey Rules</string>
    <string name="directions_button">Directions</string>
    <string name="acdc_label">Acey-deucey</string>
    <string name="acdc1">The roll of 1 and 2 (acey&#8211;deucey) is especially valuable. When you roll 1&#8211;2, this is what happens:</string>
    <string name="acdc2">Note, however, if you are unable to use any part of your roll, you forfeit the rest of your turn. For example, if you can move your 2 but cannot use the 1, you may not name a double and you may not roll again.\n\nIt is permissible to name a double even if only part of it can be used. For example, after moving 1 and 2, you can name 6&#8211;6 as your double even if only three of the 6s can be played. You would then lose the fourth 6, and you would not get to roll again.</string>
    <string name="hitting_label">Hitting</string>
    <string name="hitting">A checker sitting alone on a point is called a blot. If an opposing checker lands on a blot, the blot is hit and placed on the bar.</string>
    <string name="entering_label">Entering from the bar</string>
    <string name="entering">Any time you have one or more checkers on the bar, your first obligation is to reenter those checker(s) into the opponent\'s home board. You reenter a checker by moving it to an open point corresponding to one of the numbers on the rolled dice. If you are able to enter some but not all of your checkers on the bar, you must enter as many as you can then give up the remainder of your turn.</string>
    <string name="bearing_off_label">Bearing Off</string>
    <string name="bearing_off1">Once you have moved all fifteen of your checkers into your home board, you may begin bearing off. You bear off a checker by rolling a number that corresponds to the point on which it resides, then removing the checker from the board.\n\nIf there is no checker on the point indicated by the roll, you must make a legal move using a checker on a higher-numbered point. If there are no checkers on higher-numbered points, you must remove a checker from the highest point that has a checker.</string>
    <string name="scoring_label">Scoring</string>
    <string name="scoring">The loser pays one point for each of his checkers still on the board (or yet to be entered). Gammons and backgammons do not count extra.\n\nThe doubling cube is not used in acey&#8211;deucey.</string>
    <string name="strategy_label">Strategy</string>
    <string name="strategy">Because the roll of 1&#8211;2 is so powerful, luck plays a greater part in acey&#8211;deucey than in regular backgammon. You are never completely out of a game. On the other hand, since you start with fifteen men back, there is some added opportunity for skill in placing your checkers to block the opponent.\n\nTypical strategy is to get at least half your checkers on the board as quickly as possible and form them into a blockade.</string>
    <string name="overview">The American version of Acey-Deucey has been a favorite game of the U.S. Navy, Marine Corps, and Merchant Marine since the First World War.</string>
    <string name="setup_label">Setup</string>
    <string name="setup">Each player starts with fifteen checkers off the board. The players enter their checkers in the opponent\'s home board, then bring them around the board as shown in the diagram below.</string> 
    <string name="object_label">Object</string>
    <string name="object">The object of the game is to move all of your checkers around the board to your own home table and then bear them off. The first player to bear off all of his checkers wins the game.</string>
    <string name="start_label">To Start</string>
    <string name="start">Each player rolls one die and the higher number goes first. That player then rolls both dice again to begin his first turn.</string>
    <string name="bunker_entering_label">Entering Checkers</string>
    <string name="bunker_entering">You enter a checker by placing it on a point in the opponent\'s home board corresponding to a number rolled. For example, if you roll 6&#8211;3, then you enter one checker on the opponent\'s six-point and one checker on his three-point. Once you have entered one or more checkers, you may use subsequent rolls to move those checkers forward, to enter more checkers, or both.</string>
    <string name="movement_label">Movement</string>
    <string name="movement">The roll of the dice indicates how many points, or pips, the player is to move his checkers. The following rules apply:</string>
    <string name="movement1">A checker may be moved only to an open point, one that is not occupied by two or more opposing checkers.</string>
    <string name="movement2">The numbers on the two dice constitute separate moves. For example, if you roll 5 and 3, you may move one checker five spaces to an open point and another checker three spaces to an open point, or you may move the one checker a total of eight spaces to an open point, but only if the intermediate point (either three or five spaces from the starting point) is also open.</string>
    <string name="movement3">Doubles are played twice. For example, a roll of 6&#8211;6 means you have four sixes to use.</string>
    <string name="movement4">You must use both numbers of a roll if possible, or all four numbers in the case of doubles. If you can play one number but not both, you must play the higher one.</string>
    <string name="acdcb1">First you play the 1 and 2 in the normal way.</string>
    <string name="acdcb2">Then you name any roll of doubles you wish and play it accordingly.</string>
    <string name="acdcb3">Then you roll again and play the roll as usual.</string>
    <string name="acdcb4">If the number rolled is another 1&#8211;2, you keep going&#8211;naming and playing a double of your choice, and then rolling again.</string>
    <string name="more_info_label">More info</string>
    <string name="more_info">For more info, please visit</string>
    <string name="roll_for_turn">Roll for Turn</string>
    <string name="red_roll">Red Roll</string>
    <string name="white_roll">White Roll</string>
    <string name="clear_dice">Clear Dice</string>
    <string name="white_won">White Won!!!</string>
    <string name="red_won">Red Won!!!</string>
    <string name="play_mode_single">Human vs Computer</string>
    <string name="play_mode_multi">Human vs Human</string>
    <string name="play_mode_network">Human vs Human (Bluetooth)</string>    
    <string name="start_game">Start Game</string>
    <string name="title_activity_settings">New Game</string>
    <string name="choose_color">Your Color:</string>
    <string name="white">White</string>
    <string name="red">Red</string>
    <string name="find_game">Find Game</string>
    <string name="opponents_turn">Waiting for opponent\'s move &#8230;</string>
    <string name="title_activity_find_game">Find game to join on another device </string>
    <string name="already_discoverable">This device is discoverable to other devices.</string>
    <string name="waiting_for_join">Waiting for another player to join &#8230;</string>
    <!--  Bluetooth Chat -->
    <string name="send">Send</string>
	<string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled">Bluetooth must be enabled to play across devices</string>
    <string name="title_connecting">connecting&#8230;</string>
    <string name="title_connected_to">Connected to: </string>
    <string name="title_not_connected">not connected</string>
    <string name="scanning">scanning for devices&#8230;</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="connect">Connect a device</string>
    <string name="disconnect">Disconnect</string>
    <string name="discoverable">Make discoverable</string>
    <string name="chat">Chat</string>
</resources>