<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/new_game"
          android:title="@string/new_game"
          android:showAsAction="never|withText"/>
    <item android:id="@+id/directions"
          android:title="@string/directions_button"
          android:showAsAction="never|withText"/>
    <item android:id="@+id/human_white_player"
          android:title="@string/human_white_player"
          android:checkable="true"
          android:checked="true"
          android:showAsAction="never|withText"/>
    <item android:id="@+id/human_red_player"
          android:title="@string/human_red_player"
          android:checkable="true"
          android:checked="true"
          android:showAsAction="never|withText"/>
</menu>