<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="12dip">
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:orientation="vertical" >
	    
		<RadioGroup
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="4dp"
		    android:gravity="top">
		    <RadioButton android:id="@+id/radio_single"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/play_mode_single"
		        android:onClick="onPlayModeClicked"
		        android:checked="true" />
		    <RadioButton android:id="@+id/radio_multi"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/play_mode_multi"
		        android:onClick="onPlayModeClicked"/>
		</RadioGroup>
		<TextView android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="4dp"
		    android:gravity="top"
		    android:text="@string/choose_color"/>		
		<RadioGroup 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="top">
		    <RadioButton android:id="@+id/radio_white"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/white"
		        android:checked="true" />
		    <RadioButton android:id="@+id/radio_red"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/red"/>
		</RadioGroup>

		<Button
		    android:id="@+id/button_start"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="25dp"
		    android:onClick="startGame"
		    android:text="@string/start_game" />

	</LinearLayout >
</ScrollView>